camera plugin issue createObjectURL replaced with srcObject

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,16 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <!--
   <script src="cordova.js"></script>
+  -->
+  <style>
+  .cordova-camera-capture
+  {
+    text-align: center;
+    top: 100px;
+  }
+  </style>
 </head>
 
 <body>
